--- a/.github/workflows/create-release-pr.yml
+++ b/.github/workflows/create-release-pr.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   createPullRequest:
     if: |
-      github.event_name == 'issue_comment' &&
+      github.event_name == 'master' &&
       (github.event.comment.author_association == 'MEMBER' || github.event.comment.author_association == 'OWNER') &&
       startsWith(github.event.comment.body, '/create release')
     runs-on: ubuntu-latest
